test: refactor tests