@@ -19,6 +19,7 @@ import org.springframework.data.domain.*;
 import org.springframework.data.web.PagedModel;
 
 import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -37,6 +38,26 @@ class CategoryServiceImplTest {
     @InjectMocks
     private CategoryServiceImpl categoryService;
 
+    private Category createCategory(UUID id, String name, CategoryStatus status, Instant createdAt, Instant updatedAt) {
+        return Category.builder()
+                .categoryId(id)
+                .categoryName(name)
+                .categoryStatus(status)
+                .createdAt(createdAt)
+                .updatedAt(updatedAt)
+                .build();
+    }
+
+    private CategoryResponse createCategoryResponse(UUID id, String name, CategoryStatus status, Instant createdAt, Instant updatedAt) {
+        return CategoryResponse.builder()
+                .categoryId(id)
+                .categoryName(name)
+                .categoryStatus(status)
+                .createdAt(createdAt)
+                .updatedAt(updatedAt)
+                .build();
+    }
+
     @Test
     void getAllActiveCategories_shouldReturnPagedActiveCategoriesWhenCategoriesExist() {
 
@@ -47,70 +68,42 @@ class CategoryServiceImplTest {
 
         Pageable pageRequest = PageRequest.of(page, size, Sort.Direction.fromString(order), sortBy);
 
-        Category category1 = Category.builder()
-                .categoryId(UUID.randomUUID())
-                .categoryName("Pots and planters")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .products(new HashSet<>())
-                .build();
-
-        Category category2 = Category.builder()
-                .categoryId(UUID.randomUUID())
-                .categoryName("Tools and equipment")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .products(new HashSet<>())
-                .build();
+        Category category1 = createCategory(UUID.randomUUID(), "Category One", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
+        Category category2 = createCategory(UUID.randomUUID(), "Category Two", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
         List<Category> allCategories = List.of(category1, category2);
-        Page<Category> pageIml = new PageImpl<>(allCategories, pageRequest, allCategories.size());
-
-        CategoryResponse categoryResponse1 = CategoryResponse.builder()
-                .categoryId(category1.getCategoryId())
-                .categoryName(category1.getCategoryName())
-                .categoryStatus(category1.getCategoryStatus())
-                .createdAt(category1.getCreatedAt())
-                .updatedAt(category1.getUpdatedAt())
-                .build();
-
-        CategoryResponse categoryResponse2 = CategoryResponse.builder()
-                .categoryId(category2.getCategoryId())
-                .categoryName(category2.getCategoryName())
-                .categoryStatus(category2.getCategoryStatus())
-                .createdAt(category2.getCreatedAt())
-                .updatedAt(category2.getUpdatedAt())
-                .build();
-
+        Page<Category> categoryPage = new PageImpl<>(allCategories, pageRequest, allCategories.size());
         long expectedTotalPages = (long) Math.ceil((double) allCategories.size() / size);
 
-        when(categoryRepository.findAllByCategoryStatusIs(CategoryStatus.ACTIVE, pageRequest)).thenReturn(pageIml);
+        CategoryResponse categoryResponse1 = createCategoryResponse(category1.getCategoryId(), category1.getCategoryName(), category1.getCategoryStatus(), category1.getCreatedAt(), category1.getUpdatedAt());
+
+        CategoryResponse categoryResponse2 = createCategoryResponse(category2.getCategoryId(), category2.getCategoryName(), category2.getCategoryStatus(), category2.getCreatedAt(), category2.getUpdatedAt());
+
+        when(categoryRepository.findAllByCategoryStatus(CategoryStatus.ACTIVE, pageRequest)).thenReturn(categoryPage);
         when(categoryMapper.categoryToResponse(category1)).thenReturn(categoryResponse1);
         when(categoryMapper.categoryToResponse(category2)).thenReturn(categoryResponse2);
 
-        PagedModel<CategoryResponse> retrievedCategories = categoryService.getAllActiveCategories(size, page, order, sortBy);
+        PagedModel<CategoryResponse> actualResponse = categoryService.getAllActiveCategories(size, page, order, sortBy);
 
-        verify(categoryRepository, times(1)).findAllByCategoryStatusIs(CategoryStatus.ACTIVE, pageRequest);
+        verify(categoryRepository, times(1)).findAllByCategoryStatus(CategoryStatus.ACTIVE, pageRequest);
         verify(categoryMapper, times(1)).categoryToResponse(category1);
         verify(categoryMapper, times(1)).categoryToResponse(category2);
 
-        assertNotNull(retrievedCategories);
-        assertNotNull(retrievedCategories.getMetadata());
-        assertEquals(allCategories.size(), retrievedCategories.getMetadata().totalElements());
-        assertEquals(expectedTotalPages, retrievedCategories.getMetadata().totalPages());
-        assertEquals(size, retrievedCategories.getMetadata().size());
-        assertEquals(page, retrievedCategories.getMetadata().number());
+        assertNotNull(actualResponse);
+        assertNotNull(actualResponse.getMetadata());
+        assertEquals(allCategories.size(), actualResponse.getMetadata().totalElements());
+        assertEquals(expectedTotalPages, actualResponse.getMetadata().totalPages());
+        assertEquals(size, actualResponse.getMetadata().size());
+        assertEquals(page, actualResponse.getMetadata().number());
 
-        assertNotNull(retrievedCategories.getContent());
-        assertEquals(allCategories.size(), retrievedCategories.getContent().size());
-        assertEquals(categoryResponse1.getCategoryId(), retrievedCategories.getContent().get(0).getCategoryId());
-        assertEquals(categoryResponse1.getCategoryName(), retrievedCategories.getContent().get(0).getCategoryName());
-        assertEquals(CategoryStatus.ACTIVE, retrievedCategories.getContent().get(0).getCategoryStatus());
-        assertEquals(categoryResponse2.getCategoryId(), retrievedCategories.getContent().get(1).getCategoryId());
-        assertEquals(categoryResponse2.getCategoryName(), retrievedCategories.getContent().get(1).getCategoryName());
-        assertEquals(CategoryStatus.ACTIVE, retrievedCategories.getContent().get(1).getCategoryStatus());
+        assertNotNull(actualResponse.getContent());
+        assertEquals(allCategories.size(), actualResponse.getContent().size());
+        assertEquals(categoryResponse1.getCategoryId(), actualResponse.getContent().getFirst().getCategoryId());
+        assertEquals(categoryResponse1.getCategoryName(), actualResponse.getContent().getFirst().getCategoryName());
+        assertEquals(CategoryStatus.ACTIVE, actualResponse.getContent().getFirst().getCategoryStatus());
+        assertEquals(categoryResponse2.getCategoryId(), actualResponse.getContent().get(1).getCategoryId());
+        assertEquals(categoryResponse2.getCategoryName(), actualResponse.getContent().get(1).getCategoryName());
+        assertEquals(CategoryStatus.ACTIVE, actualResponse.getContent().get(1).getCategoryStatus());
     }
 
     @Test
@@ -124,49 +117,23 @@ class CategoryServiceImplTest {
         Pageable pageRequest = PageRequest.of(page, size, Sort.Direction.fromString(order), sortBy);
         Page<Category> emptyPage = new PageImpl<>(Collections.emptyList(), pageRequest, 0);
 
-        when(categoryRepository.findAllByCategoryStatusIs(CategoryStatus.ACTIVE, pageRequest)).thenReturn(emptyPage);
+        when(categoryRepository.findAllByCategoryStatus(CategoryStatus.ACTIVE, pageRequest)).thenReturn(emptyPage);
 
-        PagedModel<CategoryResponse> retrievedCategories = categoryService.getAllActiveCategories(size, page, order, sortBy);
+        PagedModel<CategoryResponse> actualResponse = categoryService.getAllActiveCategories(size, page, order, sortBy);
 
-        verify(categoryRepository, times(1)).findAllByCategoryStatusIs(CategoryStatus.ACTIVE, pageRequest);
-        verify(categoryMapper, never()).categoryToResponse(any());
+        verify(categoryRepository, times(1)).findAllByCategoryStatus(CategoryStatus.ACTIVE, pageRequest);
+        verify(categoryMapper, never()).categoryToResponse(any(Category.class));
 
-        assertNotNull(retrievedCategories);
-        assertNotNull(retrievedCategories.getMetadata());
-        assertEquals(0L, retrievedCategories.getMetadata().totalElements());
-        assertEquals(0L, retrievedCategories.getMetadata().totalPages());
-        assertEquals(size, retrievedCategories.getMetadata().size());
-        assertEquals(page, retrievedCategories.getMetadata().number());
+        assertNotNull(actualResponse);
+        assertNotNull(actualResponse.getMetadata());
+        assertEquals(0L, actualResponse.getMetadata().totalElements());
+        assertEquals(0L, actualResponse.getMetadata().totalPages());
+        assertEquals(size, actualResponse.getMetadata().size());
+        assertEquals(page, actualResponse.getMetadata().number());
 
-        assertNotNull(retrievedCategories.getContent());
-        assertTrue(retrievedCategories.getContent().isEmpty());
-        assertEquals(0, retrievedCategories.getContent().size());
-    }
-
-    @Test
-    void getAllActiveCategories_shouldPassCorrectPageableToRepository() {
-
-        int page = 0;
-        int size = 5;
-        String order = "ASC";
-        String sortBy = "createdAt";
-
-        ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-
-        when(categoryRepository.findAllByCategoryStatusIs(eq(CategoryStatus.ACTIVE), any(Pageable.class)))
-                .thenReturn(Page.empty());
-
-        categoryService.getAllActiveCategories(size, page, order, sortBy);
-
-        verify(categoryRepository).findAllByCategoryStatusIs(eq(CategoryStatus.ACTIVE), pageableCaptor.capture());
-
-        Pageable usedPageable = pageableCaptor.getValue();
-        assertEquals(page, usedPageable.getPageNumber());
-        assertEquals(size, usedPageable.getPageSize());
-
-        Sort.Order sortOrder = usedPageable.getSort().getOrderFor(sortBy);
-        assertNotNull(sortOrder);
-        assertEquals(Sort.Direction.ASC, sortOrder.getDirection());
+        assertNotNull(actualResponse.getContent());
+        assertTrue(actualResponse.getContent().isEmpty());
+        assertEquals(0, actualResponse.getContent().size());
     }
 
     @Test
@@ -182,70 +149,42 @@ class CategoryServiceImplTest {
 
         Pageable pageRequest = PageRequest.of(page, size, Sort.Direction.fromString(order), sortBy);
 
-        Category category1 = Category.builder()
-                .categoryId(UUID.randomUUID())
-                .categoryName("Pots and planters")
-                .categoryStatus(status)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .products(new HashSet<>())
-                .build();
-
-        Category category2 = Category.builder()
-                .categoryId(UUID.randomUUID())
-                .categoryName("Tools and equipment")
-                .categoryStatus(status)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .products(new HashSet<>())
-                .build();
+        Category category1 = createCategory(UUID.randomUUID(), "Category One", status, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
+        Category category2 = createCategory(UUID.randomUUID(), "Category Two", status, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
         List<Category> allCategories = List.of(category1, category2);
-        Page<Category> pageIml = new PageImpl<>(allCategories, pageRequest, allCategories.size());
-
-        CategoryResponse categoryResponse1 = CategoryResponse.builder()
-                .categoryId(category1.getCategoryId())
-                .categoryName(category1.getCategoryName())
-                .categoryStatus(category1.getCategoryStatus())
-                .createdAt(category1.getCreatedAt())
-                .updatedAt(category1.getUpdatedAt())
-                .build();
-
-        CategoryResponse categoryResponse2 = CategoryResponse.builder()
-                .categoryId(category2.getCategoryId())
-                .categoryName(category2.getCategoryName())
-                .categoryStatus(category2.getCategoryStatus())
-                .createdAt(category2.getCreatedAt())
-                .updatedAt(category2.getUpdatedAt())
-                .build();
-
+        Page<Category> categoryPage = new PageImpl<>(allCategories, pageRequest, allCategories.size());
         long expectedTotalPages = (long) Math.ceil((double) allCategories.size() / size);
 
-        when(categoryRepository.findAllByCategoryStatusIs(status, pageRequest)).thenReturn(pageIml);
+        CategoryResponse categoryResponse1 = createCategoryResponse(category1.getCategoryId(), category1.getCategoryName(), category1.getCategoryStatus(), category1.getCreatedAt(), category1.getUpdatedAt());
+
+        CategoryResponse categoryResponse2 = createCategoryResponse(category2.getCategoryId(), category2.getCategoryName(), category2.getCategoryStatus(), category2.getCreatedAt(), category2.getUpdatedAt());
+
+        when(categoryRepository.findAllByCategoryStatus(status, pageRequest)).thenReturn(categoryPage);
         when(categoryMapper.categoryToResponse(category1)).thenReturn(categoryResponse1);
         when(categoryMapper.categoryToResponse(category2)).thenReturn(categoryResponse2);
 
-        PagedModel<CategoryResponse> retrievedCategories = categoryService.getCategoriesByStatus(categoryStatus, size, page, order, sortBy);
+        PagedModel<CategoryResponse> actualResponse = categoryService.getCategoriesByStatus(categoryStatus, size, page, order, sortBy);
 
-        verify(categoryRepository, times(1)).findAllByCategoryStatusIs(status, pageRequest);
+        verify(categoryRepository, times(1)).findAllByCategoryStatus(status, pageRequest);
         verify(categoryMapper, times(1)).categoryToResponse(category1);
         verify(categoryMapper, times(1)).categoryToResponse(category2);
 
-        assertNotNull(retrievedCategories);
-        assertNotNull(retrievedCategories.getMetadata());
-        assertEquals(allCategories.size(), retrievedCategories.getMetadata().totalElements());
-        assertEquals(expectedTotalPages, retrievedCategories.getMetadata().totalPages());
-        assertEquals(size, retrievedCategories.getMetadata().size());
-        assertEquals(page, retrievedCategories.getMetadata().number());
+        assertNotNull(actualResponse);
+        assertNotNull(actualResponse.getMetadata());
+        assertEquals(allCategories.size(), actualResponse.getMetadata().totalElements());
+        assertEquals(expectedTotalPages, actualResponse.getMetadata().totalPages());
+        assertEquals(size, actualResponse.getMetadata().size());
+        assertEquals(page, actualResponse.getMetadata().number());
 
-        assertNotNull(retrievedCategories.getContent());
-        assertEquals(allCategories.size(), retrievedCategories.getContent().size());
-        assertEquals(categoryResponse1.getCategoryId(), retrievedCategories.getContent().get(0).getCategoryId());
-        assertEquals(categoryResponse1.getCategoryName(), retrievedCategories.getContent().get(0).getCategoryName());
-        assertEquals(categoryResponse2.getCategoryStatus(), retrievedCategories.getContent().get(0).getCategoryStatus());
-        assertEquals(categoryResponse2.getCategoryId(), retrievedCategories.getContent().get(1).getCategoryId());
-        assertEquals(categoryResponse2.getCategoryName(), retrievedCategories.getContent().get(1).getCategoryName());
-        assertEquals(categoryResponse2.getCategoryStatus(), retrievedCategories.getContent().get(1).getCategoryStatus());
+        assertNotNull(actualResponse.getContent());
+        assertEquals(allCategories.size(), actualResponse.getContent().size());
+        assertEquals(categoryResponse1.getCategoryId(), actualResponse.getContent().getFirst().getCategoryId());
+        assertEquals(categoryResponse1.getCategoryName(), actualResponse.getContent().getFirst().getCategoryName());
+        assertEquals(categoryResponse1.getCategoryStatus(), actualResponse.getContent().getFirst().getCategoryStatus());
+        assertEquals(categoryResponse2.getCategoryId(), actualResponse.getContent().get(1).getCategoryId());
+        assertEquals(categoryResponse2.getCategoryName(), actualResponse.getContent().get(1).getCategoryName());
+        assertEquals(categoryResponse2.getCategoryStatus(), actualResponse.getContent().get(1).getCategoryStatus());
     }
 
     @Test
@@ -258,125 +197,42 @@ class CategoryServiceImplTest {
 
         Pageable pageRequest = PageRequest.of(page, size, Sort.Direction.fromString(order), sortBy);
 
-        Category category1 = Category.builder()
-                .categoryId(UUID.randomUUID())
-                .categoryName("Pots and planters")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .products(new HashSet<>())
-                .build();
-
-        Category category2 = Category.builder()
-                .categoryId(UUID.randomUUID())
-                .categoryName("Tools and equipment")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .products(new HashSet<>())
-                .build();
+        Category category1 = createCategory(UUID.randomUUID(), "Category One", CategoryStatus.INACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
+        Category category2 = createCategory(UUID.randomUUID(), "Category Two", CategoryStatus.INACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
         List<Category> allCategories = List.of(category1, category2);
-        Page<Category> pageIml = new PageImpl<>(allCategories, pageRequest, allCategories.size());
-
-        CategoryResponse categoryResponse1 = CategoryResponse.builder()
-                .categoryId(category1.getCategoryId())
-                .categoryName(category1.getCategoryName())
-                .categoryStatus(category1.getCategoryStatus())
-                .createdAt(category1.getCreatedAt())
-                .updatedAt(category1.getUpdatedAt())
-                .build();
-
-        CategoryResponse categoryResponse2 = CategoryResponse.builder()
-                .categoryId(category2.getCategoryId())
-                .categoryName(category2.getCategoryName())
-                .categoryStatus(category2.getCategoryStatus())
-                .createdAt(category2.getCreatedAt())
-                .updatedAt(category2.getUpdatedAt())
-                .build();
-
+        Page<Category> categoryPage = new PageImpl<>(allCategories, pageRequest, allCategories.size());
         long expectedTotalPages = (long) Math.ceil((double) allCategories.size() / size);
 
-        when(categoryRepository.findAll(pageRequest)).thenReturn(pageIml);
+        CategoryResponse categoryResponse1 = createCategoryResponse(category1.getCategoryId(), category1.getCategoryName(), category1.getCategoryStatus(), category1.getCreatedAt(), category1.getUpdatedAt());
+
+        CategoryResponse categoryResponse2 = createCategoryResponse(category2.getCategoryId(), category2.getCategoryName(), category2.getCategoryStatus(), category2.getCreatedAt(), category2.getUpdatedAt());
+
+        when(categoryRepository.findAll(pageRequest)).thenReturn(categoryPage);
         when(categoryMapper.categoryToResponse(category1)).thenReturn(categoryResponse1);
         when(categoryMapper.categoryToResponse(category2)).thenReturn(categoryResponse2);
 
-        PagedModel<CategoryResponse> retrievedCategories = categoryService.getCategoriesByStatus(null, size, page, order, sortBy);
+        PagedModel<CategoryResponse> actualResponse = categoryService.getCategoriesByStatus(null, size, page, order, sortBy);
 
         verify(categoryRepository, times(1)).findAll(pageRequest);
         verify(categoryMapper, times(1)).categoryToResponse(category1);
         verify(categoryMapper, times(1)).categoryToResponse(category2);
 
-        assertNotNull(retrievedCategories);
-        assertNotNull(retrievedCategories.getMetadata());
-        assertEquals(allCategories.size(), retrievedCategories.getMetadata().totalElements());
-        assertEquals(expectedTotalPages, retrievedCategories.getMetadata().totalPages());
-        assertEquals(size, retrievedCategories.getMetadata().size());
-        assertEquals(page, retrievedCategories.getMetadata().number());
+        assertNotNull(actualResponse);
+        assertNotNull(actualResponse.getMetadata());
+        assertEquals(allCategories.size(), actualResponse.getMetadata().totalElements());
+        assertEquals(expectedTotalPages, actualResponse.getMetadata().totalPages());
+        assertEquals(size, actualResponse.getMetadata().size());
+        assertEquals(page, actualResponse.getMetadata().number());
 
-        assertNotNull(retrievedCategories.getContent());
-        assertEquals(allCategories.size(), retrievedCategories.getContent().size());
-        assertEquals(categoryResponse1.getCategoryId(), retrievedCategories.getContent().get(0).getCategoryId());
-        assertEquals(categoryResponse1.getCategoryName(), retrievedCategories.getContent().get(0).getCategoryName());
-        assertEquals(categoryResponse2.getCategoryStatus(), retrievedCategories.getContent().get(0).getCategoryStatus());
-        assertEquals(categoryResponse2.getCategoryId(), retrievedCategories.getContent().get(1).getCategoryId());
-        assertEquals(categoryResponse2.getCategoryName(), retrievedCategories.getContent().get(1).getCategoryName());
-        assertEquals(categoryResponse2.getCategoryStatus(), retrievedCategories.getContent().get(1).getCategoryStatus());
-    }
-
-    @Test
-    void getCategoriesByStatus_shouldPassCorrectPageableToRepository() {
-
-        CategoryStatus status = CategoryStatus.INACTIVE;
-        String categoryStatus = status.name();
-
-        int page = 0;
-        int size = 5;
-        String order = "ASC";
-        String sortBy = "createdAt";
-
-        ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-
-        when(categoryRepository.findAllByCategoryStatusIs(eq(status), any(Pageable.class)))
-                .thenReturn(Page.empty());
-
-        categoryService.getCategoriesByStatus(categoryStatus, size, page, order, sortBy);
-
-        verify(categoryRepository).findAllByCategoryStatusIs(eq(status), pageableCaptor.capture());
-
-        Pageable usedPageable = pageableCaptor.getValue();
-        assertEquals(page, usedPageable.getPageNumber());
-        assertEquals(size, usedPageable.getPageSize());
-
-        Sort.Order sortOrder = usedPageable.getSort().getOrderFor(sortBy);
-        assertNotNull(sortOrder);
-        assertEquals(Sort.Direction.ASC, sortOrder.getDirection());
-    }
-
-    @Test
-    void getCategoriesByStatus_shouldPassCorrectPageableToRepositoryIfNoStatusProvided() {
-
-        int page = 0;
-        int size = 5;
-        String order = "ASC";
-        String sortBy = "createdAt";
-
-        ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-
-        when(categoryRepository.findAll(any(Pageable.class)))
-                .thenReturn(Page.empty());
-
-        categoryService.getCategoriesByStatus(null, size, page, order, sortBy);
-
-        verify(categoryRepository).findAll(pageableCaptor.capture());
-
-        Pageable usedPageable = pageableCaptor.getValue();
-        assertEquals(page, usedPageable.getPageNumber());
-        assertEquals(size, usedPageable.getPageSize());
-
-        Sort.Order sortOrder = usedPageable.getSort().getOrderFor(sortBy);
-        assertNotNull(sortOrder);
-        assertEquals(Sort.Direction.ASC, sortOrder.getDirection());
+        assertNotNull(actualResponse.getContent());
+        assertEquals(allCategories.size(), actualResponse.getContent().size());
+        assertEquals(categoryResponse1.getCategoryId(), actualResponse.getContent().getFirst().getCategoryId());
+        assertEquals(categoryResponse1.getCategoryName(), actualResponse.getContent().getFirst().getCategoryName());
+        assertEquals(categoryResponse1.getCategoryStatus(), actualResponse.getContent().getFirst().getCategoryStatus());
+        assertEquals(categoryResponse2.getCategoryId(), actualResponse.getContent().get(1).getCategoryId());
+        assertEquals(categoryResponse2.getCategoryName(), actualResponse.getContent().get(1).getCategoryName());
+        assertEquals(categoryResponse2.getCategoryStatus(), actualResponse.getContent().get(1).getCategoryStatus());
     }
 
     @Test
@@ -389,38 +245,31 @@ class CategoryServiceImplTest {
         Category categoryToSave = Category.builder()
                 .categoryName(categoryRequest.getCategoryName())
                 .categoryStatus(CategoryStatus.ACTIVE)
-                .products(new HashSet<>())
                 .build();
 
-        Category savedCategory = Category.builder()
-                .categoryId(UUID.randomUUID())
-                .categoryName(categoryToSave.getCategoryName())
-                .categoryStatus(categoryToSave.getCategoryStatus())
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .products(categoryToSave.getProducts())
-                .build();
+        Category savedCategory = createCategory(UUID.randomUUID(), categoryToSave.getCategoryName(), categoryToSave.getCategoryStatus(), Instant.now(), Instant.now());
 
-        CategoryResponse categoryResponse = CategoryResponse.builder()
-                .categoryId(savedCategory.getCategoryId())
-                .categoryName(savedCategory.getCategoryName())
-                .categoryStatus(savedCategory.getCategoryStatus())
-                .createdAt(savedCategory.getCreatedAt())
-                .updatedAt(savedCategory.getUpdatedAt())
-                .build();
+        CategoryResponse categoryResponse = createCategoryResponse(savedCategory.getCategoryId(), savedCategory.getCategoryName(), savedCategory.getCategoryStatus(), savedCategory.getCreatedAt(), savedCategory.getUpdatedAt());
+
+        ArgumentCaptor<Category> categoryCaptor = ArgumentCaptor.forClass(Category.class);
 
         when(categoryRepository.existsByCategoryName(categoryRequest.getCategoryName())).thenReturn(false);
         when(categoryMapper.requestToCategory(categoryRequest)).thenReturn(categoryToSave);
-        when(categoryRepository.saveAndFlush(categoryToSave)).thenReturn(savedCategory);
+        when(categoryRepository.saveAndFlush(categoryCaptor.capture())).thenReturn(savedCategory);
         when(categoryMapper.categoryToResponse(savedCategory)).thenReturn(categoryResponse);
 
         CategoryResponse actualResponse = categoryService.addCategory(categoryRequest);
 
         verify(categoryRepository, times(1)).existsByCategoryName(categoryRequest.getCategoryName());
         verify(categoryMapper, times(1)).requestToCategory(categoryRequest);
-        verify(categoryRepository, times(1)).saveAndFlush(categoryToSave);
-        verify(categoryMapper, times(1)).categoryToResponse(savedCategory);
 
+        verify(categoryRepository, times(1)).saveAndFlush(categoryToSave);
+        Category capturedCategory = categoryCaptor.getValue();
+        assertNotNull(capturedCategory);
+        assertEquals(categoryRequest.getCategoryName(), capturedCategory.getCategoryName());
+        assertEquals(CategoryStatus.ACTIVE, capturedCategory.getCategoryStatus());
+
+        verify(categoryMapper, times(1)).categoryToResponse(savedCategory);
         assertNotNull(actualResponse);
         assertEquals(categoryResponse.getCategoryId(), actualResponse.getCategoryId());
         assertEquals(categoryResponse.getCategoryName(), actualResponse.getCategoryName());
@@ -460,46 +309,37 @@ class CategoryServiceImplTest {
                 .categoryName("Updated Name")
                 .build();
 
-        Category existingCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now().minusSeconds(3600))
-                .build();
+        Category existingCategory = createCategory(id, "Original Name", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
-        Category updatedCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Updated Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now())
-                .build();
+        existingCategory.setCategoryName(categoryRequest.getCategoryName());
 
-        CategoryResponse categoryResponse = CategoryResponse.builder()
-                .categoryId(updatedCategory.getCategoryId())
-                .categoryName(updatedCategory.getCategoryName())
-                .categoryStatus(updatedCategory.getCategoryStatus())
-                .createdAt(updatedCategory.getCreatedAt())
-                .updatedAt(updatedCategory.getUpdatedAt())
-                .build();
+        Category updatedCategory = createCategory(existingCategory.getCategoryId(), existingCategory.getCategoryName(), existingCategory.getCategoryStatus(), existingCategory.getCreatedAt(), Instant.now());
+
+        CategoryResponse categoryResponse = createCategoryResponse(updatedCategory.getCategoryId(), updatedCategory.getCategoryName(), updatedCategory.getCategoryStatus(), updatedCategory.getCreatedAt(), updatedCategory.getUpdatedAt());
+
+        ArgumentCaptor<Category> categoryCaptor = ArgumentCaptor.forClass(Category.class);
 
         when(categoryRepository.findById(id)).thenReturn(Optional.of(existingCategory));
-        when(categoryRepository.saveAndFlush(any(Category.class))).thenReturn(updatedCategory);
+        when(categoryRepository.saveAndFlush(categoryCaptor.capture())).thenReturn(updatedCategory);
         when(categoryMapper.categoryToResponse(updatedCategory)).thenReturn(categoryResponse);
 
         CategoryResponse actualResponse = categoryService.updateCategory(categoryId, categoryRequest);
 
         verify(categoryRepository, times(1)).findById(id);
-        verify(categoryRepository, times(1)).saveAndFlush(any(Category.class));
+        verify(categoryRepository, times(1)).saveAndFlush(existingCategory);
+        Category capturedCategory = categoryCaptor.getValue();
+        assertNotNull(capturedCategory);
+        assertEquals(categoryRequest.getCategoryName(), capturedCategory.getCategoryName());
+        assertEquals(CategoryStatus.ACTIVE, capturedCategory.getCategoryStatus());
+
         verify(categoryMapper, times(1)).categoryToResponse(updatedCategory);
 
         assertNotNull(actualResponse);
         assertEquals(categoryResponse.getCategoryId(), actualResponse.getCategoryId());
-        assertEquals(categoryResponse.getCategoryName(), actualResponse.getCategoryName());
+        assertEquals(categoryRequest.getCategoryName(), actualResponse.getCategoryName());
         assertEquals(categoryResponse.getCategoryStatus(), actualResponse.getCategoryStatus());
         assertEquals(categoryResponse.getCreatedAt(), actualResponse.getCreatedAt());
-         assertTrue(actualResponse.getUpdatedAt().isAfter(existingCategory.getUpdatedAt()));
+        assertTrue(actualResponse.getUpdatedAt().isAfter(existingCategory.getUpdatedAt()));
     }
 
     @Test
@@ -512,38 +352,28 @@ class CategoryServiceImplTest {
                 .categoryName(null)
                 .build();
 
-        Category existingCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now().minusSeconds(3600))
-                .build();
+        Category existingCategory = createCategory(id, "Original Name", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
-        Category updatedCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now())
-                .build();
+        Category updatedCategory = createCategory(existingCategory.getCategoryId(), existingCategory.getCategoryName(), existingCategory.getCategoryStatus(), existingCategory.getCreatedAt(), Instant.now());
 
-        CategoryResponse categoryResponse = CategoryResponse.builder()
-                .categoryId(updatedCategory.getCategoryId())
-                .categoryName(updatedCategory.getCategoryName())
-                .categoryStatus(updatedCategory.getCategoryStatus())
-                .createdAt(updatedCategory.getCreatedAt())
-                .updatedAt(updatedCategory.getUpdatedAt())
-                .build();
+        CategoryResponse categoryResponse = createCategoryResponse(updatedCategory.getCategoryId(), updatedCategory.getCategoryName(), updatedCategory.getCategoryStatus(), updatedCategory.getCreatedAt(), updatedCategory.getUpdatedAt());
+
+        ArgumentCaptor<Category> categoryCaptor = ArgumentCaptor.forClass(Category.class);
 
         when(categoryRepository.findById(id)).thenReturn(Optional.of(existingCategory));
-        when(categoryRepository.saveAndFlush(any(Category.class))).thenReturn(updatedCategory);
+        when(categoryRepository.saveAndFlush(categoryCaptor.capture())).thenReturn(updatedCategory);
         when(categoryMapper.categoryToResponse(updatedCategory)).thenReturn(categoryResponse);
 
         CategoryResponse actualResponse = categoryService.updateCategory(categoryId, categoryRequest);
 
         verify(categoryRepository, times(1)).findById(id);
-        verify(categoryRepository, times(1)).saveAndFlush(any(Category.class));
+
+        verify(categoryRepository, times(1)).saveAndFlush(existingCategory);
+        Category capturedCategory = categoryCaptor.getValue();
+        assertNotNull(capturedCategory);
+        assertEquals(existingCategory.getCategoryName(), capturedCategory.getCategoryName());
+        assertEquals(CategoryStatus.ACTIVE, capturedCategory.getCategoryStatus());
+
         verify(categoryMapper, times(1)).categoryToResponse(updatedCategory);
 
         assertNotNull(actualResponse);
@@ -557,23 +387,23 @@ class CategoryServiceImplTest {
     @Test
     void updateCategory_shouldThrowDataNotFoundExceptionWhenCategoryDoesNotExist() {
 
-        UUID id = UUID.randomUUID();
-        String categoryId = id.toString();
+        UUID nonExistingId = UUID.randomUUID();
+        String nonExistingCategoryId = nonExistingId.toString();
 
         CategoryRequest categoryRequest = CategoryRequest.builder()
                 .categoryName("Updated Name")
                 .build();
 
-        when(categoryRepository.findById(id)).thenReturn(Optional.empty());
+        when(categoryRepository.findById(nonExistingId)).thenReturn(Optional.empty());
 
         DataNotFoundException thrownException = assertThrows(DataNotFoundException.class, () ->
-            categoryService.updateCategory(categoryId, categoryRequest));
+            categoryService.updateCategory(nonExistingCategoryId, categoryRequest));
 
-        verify(categoryRepository, times(1)).findById(id);
+        verify(categoryRepository, times(1)).findById(nonExistingId);
         verify(categoryRepository, never()).saveAndFlush(any(Category.class));
         verify(categoryMapper, never()).categoryToResponse(any(Category.class));
 
-        assertEquals(String.format("Category with id: %s, was not found.", categoryId), thrownException.getMessage());
+        assertEquals(String.format("Category with id: %s, was not found.", nonExistingCategoryId), thrownException.getMessage());
     }
 
     @Test
@@ -586,13 +416,7 @@ class CategoryServiceImplTest {
                 .categoryName("Updated Name")
                 .build();
 
-        Category existingCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.INACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now().minusSeconds(3600))
-                .build();
+        Category existingCategory = createCategory(id, "Original Name", CategoryStatus.INACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
         when(categoryRepository.findById(id)).thenReturn(Optional.of(existingCategory));
 
@@ -615,32 +439,30 @@ class CategoryServiceImplTest {
         CategoryStatus newStatus = CategoryStatus.INACTIVE;
         String categoryNewStatus = newStatus.toString();
 
-        Category existingCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now().minusSeconds(3600))
+        Category existingCategory = createCategory(id, "Existing Category", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
+
+        Category updatedCategory = createCategory(existingCategory.getCategoryId(), existingCategory.getCategoryName(), newStatus, existingCategory.getCreatedAt(), Instant.now());
+
+        MessageResponse messageResponse = MessageResponse.builder()
+                .message(String.format("Status '%s' was set for category with id: %s.", categoryNewStatus.toUpperCase(), categoryId))
                 .build();
 
-        Category updatedCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(newStatus)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now())
-                .build();
+        ArgumentCaptor<Category> categoryCaptor = ArgumentCaptor.forClass(Category.class);
 
         when(categoryRepository.findById(id)).thenReturn(Optional.of(existingCategory));
-        when(categoryRepository.saveAndFlush(any(Category.class))).thenReturn(updatedCategory);
+        when(categoryRepository.saveAndFlush(categoryCaptor.capture())).thenReturn(updatedCategory);
 
-        MessageResponse response = categoryService.setCategoryStatus(categoryId, categoryNewStatus);
+        MessageResponse actualResponse = categoryService.setCategoryStatus(categoryId, categoryNewStatus);
 
         verify(categoryRepository, times(1)).findById(id);
-        verify(categoryRepository, times(1)).saveAndFlush(any(Category.class));
+        verify(categoryRepository, times(1)).saveAndFlush(existingCategory);
+        Category capturedCategory = categoryCaptor.getValue();
+        assertNotNull(capturedCategory);
+        assertEquals(existingCategory.getCategoryName(), capturedCategory.getCategoryName());
+        assertEquals(newStatus, capturedCategory.getCategoryStatus());
 
-        assertNotNull(response);
-        assertEquals(String.format("Status '%s' was set for category with id: %s.", categoryNewStatus.toUpperCase(), categoryId), response.getMessage());
+        assertNotNull(actualResponse);
+        assertEquals(messageResponse.getMessage(), actualResponse.getMessage());
     }
 
     @Test
@@ -670,13 +492,7 @@ class CategoryServiceImplTest {
 
         String categoryTargetStatus = CategoryStatus.ACTIVE.name();
 
-        Category existingCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now().minusSeconds(3600))
-                .build();
+        Category existingCategory = createCategory(id, "Existing Category", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
         when(categoryRepository.findById(id)).thenReturn(Optional.of(existingCategory));
 
@@ -695,15 +511,9 @@ class CategoryServiceImplTest {
         UUID id = UUID.randomUUID();
         String categoryId = id.toString();
 
-        String invalidStatusString = "NOT_VALID_STATUS";
+        String invalidStatusString = "INVALID_STATUS";
 
-        Category existingCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now().minusSeconds(3600))
-                .build();
+        Category existingCategory = createCategory(id, "Existing Category", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
         when(categoryRepository.findById(id)).thenReturn(Optional.of(existingCategory));
 
@@ -722,30 +532,19 @@ class CategoryServiceImplTest {
 
         String categoryNewStatus = CategoryStatus.INACTIVE.name();
 
-        Category existingCategory = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now().minusSeconds(3600))
-                .build();
+        Category existingCategory = createCategory(id, "Existing Category", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
 
-        Category savedCategoryWithOriginalStatus = Category.builder()
-                .categoryId(id)
-                .categoryName("Original Name")
-                .categoryStatus(CategoryStatus.ACTIVE)
-                .createdAt(Instant.now().minusSeconds(3600))
-                .updatedAt(Instant.now())
-                .build();
+        Category categoryWithOriginalStatus = createCategory(id, "Existing Category", CategoryStatus.ACTIVE, Instant.now().minus(10L, ChronoUnit.DAYS), Instant.now().minus(10L, ChronoUnit.DAYS));
+
 
         when(categoryRepository.findById(id)).thenReturn(Optional.of(existingCategory));
-        when(categoryRepository.saveAndFlush(any(Category.class))).thenReturn(savedCategoryWithOriginalStatus);
+        when(categoryRepository.saveAndFlush(existingCategory)).thenReturn(categoryWithOriginalStatus);
 
         IllegalStateException thrown = assertThrows(IllegalStateException.class, () ->
             categoryService.setCategoryStatus(categoryId, categoryNewStatus));
 
         verify(categoryRepository, times(1)).findById(id);
-        verify(categoryRepository, times(1)).saveAndFlush(any(Category.class));
+        verify(categoryRepository, times(1)).saveAndFlush(existingCategory);
 
         assertEquals(String.format("Unfortunately something went wrong and status '%s' was not set for category with id: %s. Please, try again.", categoryNewStatus.toUpperCase(), categoryId), thrown.getMessage());
     }
